--- a/All-projects/todoList-poject/src/style.css
+++ b/All-projects/todoList-poject/src/style.css
@@ -7,8 +7,11 @@
     justify-content: space-between;
     font-size: 1.1rem;
     font-weight: bold;
+    font-family: cursive;
 }
-
+.complete{
+    background-color: #1a2a3a;
+}
 .mybutton {
     padding: 5px 10px;
     background: #dd0d6e;
