--- a/All-projects/ecommerceApp/style.css
+++ b/All-projects/ecommerceApp/style.css
@@ -23,11 +23,26 @@ body {
 #intro {
     text-align: center;
     color: #74bf29;
+    font-size: 3rem;
 }
 
 #productList {
     margin-top: 20px;
 }
+
+#products {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    column-gap: 10px;
+    row-gap: 8px;
+}
+
+#productList h3{
+    font-size: 2rem;
+    margin-bottom: 10px;
+}
+
 #products li {
     text-align: center;
     padding: 10px;
@@ -41,7 +56,7 @@ body {
 }
 
 #products li>button {
-    padding: 5px;
+    padding: 6px 10px;
     background-color: #141e8d;
     font-size: 1.1rem;
     border: none;
@@ -52,6 +67,19 @@ body {
 
 #cart {
     margin-top: 20px;
+}
+
+#cart h3{
+    font-size: 2rem;
+    margin-bottom: 10px;
+}
+
+#cartList {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    column-gap: 10px;
+    row-gap: 8px;
 }
 
 #cartList li {
@@ -76,28 +104,16 @@ body {
     border-radius: 5px;
 }
 
-#cartList li>span{
+#cartList li>span {
     margin-right: 5px;
 }
 
-#totalAmount{
+#totalAmount {
     margin-top: 20px;
     padding: 10px;
     font-size: 1.2rem;
     background-color: #1a1a1a;
     border-radius: 5px;
-}
-#checkOutBtn{
-    padding: 10px;
-    display: block;
-    margin-top: 10px;
-    background-color: #271fb4;
-    border: none;
-    outline: none;
-    color: #fff;
-    font-size: 1.1rem;
-    justify-self: center;
-    border-radius: 10px;
 }
 
 ul {
