--- a/All-projects/miniCalender/style.css
+++ b/All-projects/miniCalender/style.css
@@ -1,14 +1,13 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: cursive;
 }
 
 #intro {
-    text-align: center;
     font-family: cursive;
     color: #656c05;
-    font-size: 3.1rem;
+    font-size: 2.1rem;
 }
 
 #mainDiv {
@@ -19,6 +18,13 @@
     padding: 15px;
     box-shadow: 1px 1px 5px #1397ab;
     border-radius: 8px;
+}
+
+#year{
+    font-size: 3rem;
+    margin-top: 30px;
+    font-weight: bold;
+    color: #169896;
 }
 
 #month {
