--- a/All-projects/multiplicationApp/style.css
+++ b/All-projects/multiplicationApp/style.css
@@ -3,3 +3,70 @@
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
 }
+
+#intro{
+    text-align: center;
+    padding: 8px;
+    box-shadow: 3px 5px 5px #75605e;
+    color: #093e3e;
+}
+
+#container{
+    justify-self: center;
+    margin-top: 40px;
+    background-color: #45d1c5;
+    padding: 40px;
+    border-radius: 10px;
+}
+#score{
+    font-size: 1.5rem;
+    justify-self: right;
+    font-weight: bold;
+    color: #f10909;
+}
+
+#question{
+    font-size: 2.3rem;
+    margin-top: 15px;
+    color: #1a1a2a;
+    text-align: center;
+    font-family: cursive;
+}
+
+#answer{
+    display: block;
+    width: 100%;
+    margin-top: 10px;
+    padding: 10px;
+    justify-self: center;
+    outline: none;
+    border-radius: 5px;
+    font-size: 1.2rem;
+    font-family: cursive;
+}
+
+#answer::placeholder{
+    color: #1a1a1a;
+}
+
+#submitBtn{
+    display: block;
+    justify-self: center;
+    margin-top: 10px;
+    padding: 5px 10px;
+    font-size: 1.3rem;
+    border-radius: 5px;
+    background-color: #c1c7e1;
+    font-family: cursive;
+}
+
+#wrongMessage{
+    text-align: center;
+    color: #f10909;
+    font-size: 1.1rem;
+    margin-top: 10px;
+}
+
+.hidden{
+    display: none;
+}
