--- a/All-projects/weatherApp/style.css
+++ b/All-projects/weatherApp/style.css
@@ -24,7 +24,7 @@
     padding: 10px 12px;
     width: 320px;
     background-color: #030e1d;
-    border: none;
+    border: 1px solid #fff;
     outline: none;
     color: #fff;
     font-size: 1.3rem;
@@ -42,7 +42,7 @@
     background-color: #030e1d;
     color: #fff;
     outline: none;
-    border: none;
+    border: 1px solid #fff;
     border-radius: 5px;
     margin-top: 5px;
 }
