--- a/All-projects/miniCalender/style.css
+++ b/All-projects/miniCalender/style.css
@@ -4,6 +4,10 @@
     font-family: cursive;
 }
 
+body{
+    background-color: #000;
+}
+
 #intro {
     font-family: cursive;
     color: #656c05;
@@ -16,7 +20,7 @@
     justify-self: center;
     margin-top: 30px;
     padding: 15px;
-    box-shadow: 1px 1px 5px #1397ab;
+    box-shadow: 1px 1px 5px #92b1b6;
     border-radius: 8px;
 }
 
@@ -30,14 +34,14 @@
 #month {
     font-size: 4rem;
     font-weight: bold;
-    color: #1585cb;
+    color: #32a4eb;
     margin-top: 20px;
 }
 
 #date {
     font-size: 2.6rem;
     font-weight: bold;
-    color: #a810c7;
+    color: #cc16f0;
     margin-top: 30px;
 }
 
@@ -45,7 +49,7 @@
     font-size: 2.8rem;
     font-weight: bold;
     margin-top: 30px;
-    color: #033946;
+    color: #c2d513;
 }
 
 #break{
