--- a/All-projects/noteApp/style.css
+++ b/All-projects/noteApp/style.css
@@ -7,15 +7,15 @@
 }
 
 body {
-    background-color: #000;
+    background-color: #023438;
 }
 
 #intro {
     text-align: center;
     padding: 15px;
-    box-shadow: 5px 5px 5px #f0de19;
+    box-shadow: 5px 5px 5px #12ddd3;
     margin-top: 5px;
-    color: #f0de19;
+    color: #12ddd3;
 }
 
 #noteContainer {
@@ -37,8 +37,8 @@ body {
     background-color: inherit;
     outline: none;
     border: none;
-    box-shadow: 2px 3px 5px #f0de19;
-    color: #f0de19;
+    box-shadow: 1px 1px 3px #12ddd3;
+    color: #12ddd3;
     border-radius: 10px;
 
 }
@@ -54,13 +54,13 @@ body {
     outline: none;
     border: none;
     background-color: inherit;
-    box-shadow: 2px 3px 5px #f0de19;
-    color: #f0de19;
+    box-shadow: 1px 1px 3px #12ddd3;
+    color: #12ddd3;
     border-radius: 10px;
 }
 
-.mynote::placeholder{
-    color: #f0de19;
+.mynote::placeholder {
+    color: #12ddd3;
 }
 
 .textcross {
